add query builder

--- a/NetBeansProjects/LoginPageReview/nbproject/private/private.properties
+++ b/NetBeansProjects/LoginPageReview/nbproject/private/private.properties
@@ -1,4 +1,6 @@
 deploy.ant.properties.file=/home/nguyenhongphat0/.netbeans/8.2/tomcat80.properties
+file.reference.mysql-connector-java-5.1.45-bin.jar=/usr/share/tomcat8/lib
+file.reference.sqljdbc4.jar=/usr/share/tomcat8/lib
 j2ee.server.domain=/home/nguyenhongphat0/.tomcat8
 j2ee.server.home=/usr/share/tomcat8
 j2ee.server.instance=tomcat80:home=/usr/share/tomcat8:base=/home/nguyenhongphat0/.tomcat8
