--- a/NetBeansProjects/Welcome2018/nbproject/project.properties
+++ b/NetBeansProjects/Welcome2018/nbproject/project.properties
@@ -28,8 +28,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.mysql-connector-java-5.1.45-bin.jar=/home/nguyenhongphat0/Downloads/mysql-connector-java-5.1.45/mysql-connector-java-5.1.45-bin.jar
-file.reference.sqljdbc4.jar=/home/nguyenhongphat0/Downloads/sqljdbc4.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,9 +36,7 @@ j2ee.platform=1.7-web
 j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/mysql-connector-java-5.1.45-bin.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/sqljdbc4.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
-javac.classpath=\
-    ${file.reference.sqljdbc4.jar}:\
-    ${file.reference.mysql-connector-java-5.1.45-bin.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -83,6 +79,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=LoginPageReview.war
+war.name=Welcome2018.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
