finish el and jstl

--- a/NetBeansProjects/DemoJavaBeans/nbproject/private/private.properties
+++ b/NetBeansProjects/DemoJavaBeans/nbproject/private/private.properties
@@ -2,4 +2,7 @@ deploy.ant.properties.file=/home/nguyenhongphat0/.netbeans/8.2/tomcat80.properti
 j2ee.server.domain=/home/nguyenhongphat0/.tomcat8
 j2ee.server.home=/usr/share/tomcat8
 j2ee.server.instance=tomcat80:home=/usr/share/tomcat8:base=/home/nguyenhongphat0/.tomcat8
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=/home/nguyenhongphat0/.netbeans/8.2/build.properties
